crates/solidity-v2/testing/snapshots/diagnostics_output/structure/break_outside_loop/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[SyntaxError 6102] Error: "break" has to be in a "for" or "while" loop.
   ╭─[input.sol:7:9]
   │
 7 │         break;
   │         ──┬──  
   │           ╰──── Error occurred here.
───╯

[SyntaxError 6102] Error: "break" has to be in a "for" or "while" loop.
    ╭─[input.sol:13:13]
    │
 13 │             break;
    │             ──┬──  
    │               ╰──── Error occurred here.
────╯
